Tweak hover formatting, strange tick coloring, and subplot overlap issue

--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -294,12 +294,6 @@ p {
     align-items: stretch;
 }
 
-.line {
-    fill: none;
-    stroke: #4CAf50;
-    stroke-width: 2px;
-}
-
 .chart-container {
     display: flex;
     flex-direction: column;
